<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel" />

    <EditText
        android:id="@+id/editTextNum"
        android:layout_width="match_parent"
        android:hint="@string/tel_input"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/pass_tips"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

</LinearLayout>