<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.signin.MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:paddingLeft="50dp"
        android:src="@drawable/bg_logo_101" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_account"
        android:hint="@string/user_tips" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/userName"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/pass_tips"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/Password"
        android:layout_marginTop="20dp" >

        <CheckBox
            android:id="@+id/check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/list_item_radius" />

        <TextView
            android:id="@+id/remenber"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/remember"
            android:textColor="#868586" />
    </LinearLayout>

    <Button
        android:id="@+id/Button"
        style="@style/common_button_style"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/rem"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="userLogin"
        android:text="@string/buttonName"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageView03"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/app_name"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_login_qq" />

        <ImageView
            android:id="@+id/imageView04"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_login_weibo" />

        <ImageView
            android:id="@+id/imageView05"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_login_99" />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:text="@string/message"
            android:textColor="#868586" />

        <TextView
            android:id="@+id/registerMessage"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:onClick="toRegister"
            android:text="@string/registerMessage"
            android:textColor="#00FFFF" />
    </LinearLayout>

</RelativeLayout>