<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/success_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.demo.RegisterSuccessActivity" >

    <ImageView
        android:id="@+id/successImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/register_success" />

    <TextView
        android:id="@+id/tips_register_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="15dp"
        android:text="@string/tips_register_success"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <!-- 半透明 -->

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#80ffffff"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="15dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/show_userName"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/show_userName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quick_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/show_password"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quick_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tips_toPersonal"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tips_toPersonal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/toPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="toPersonal"
                android:text="@string/toPersonal"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>